Updated index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
            a:link {text-decoration: none}
            a:visited {text-decoration: none}
            a:hover {text-decoration: none; color:#ff0000}
+           #myName{color: green; font-weight: bold;}
        </style>
 </head>
 <body leftmargin=110  rightmargin=110 topmargin=20 bgcolor=#FFFFFF text=#000000 link=blue vlink=blue alink=blue>
@@ -420,11 +421,21 @@ LOOPER:
     <font color=#000064>END</font> MAIN 
  
 </font></pre>
-<!-- emu8086 version 4.08    -->
-<!-- STOP AUTOMATIC ASM TO HTML EXPORT -->
+
+<h3>Screenshots of the Program</h3>
+
+<img src="Calculator-1.0-Screenshot-01.jpg" alt="A Screenshot of the program"/>
+<br>
+
+<img src="Calculator-1.0-Screenshot-02.jpg" alt="Another Screenshot of the program"/>
 
 
+<!-- *** -->
+ 
 
+<footer>
+    <p> Copyright &copy; <a href="https://www.sbook99.com/p/shuvongkor-barman.html"> <span id="myName">Shuvongkor Barman</span></a> 2019 </p>
+</footer>
 
  
  
